# line-rich-menu-python

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  rich_maker.py  template-284105.json  template.json
.github/workflows/: build.yml  test.yml
src/line_rich_menu/: __init__.py  const.py  helper.py  line_rich_menu.py  menu.py
src/line_rich_menu/cli/: main.py
tests/: conftest.py  test_lib.py
tests/assets/: invalid_menu.json  valid_menu.json
